strapi-basic-postgres/01-strapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: strapi-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: strapi
  template:
    metadata:
      labels:
        app: strapi
    spec:
      containers:
      - name: strapi
        image: naskio/strapi
        ports:
        - containerPort: 1337
