strapi-basic-postgres/02-strapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: strapi-service
spec:
  selector:
    app: strapi
  ports:
  - protocol: TCP
    port: 80
    targetPort: 1337
  type: LoadBalancer
