strapi-basic-postgres/03-strapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
spec:
  rules:
  - host: strapi.backend
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: strapi-service
              port:
                number: 80
